parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    QUOTE

Grammar

Rule 0     S' -> scope
Rule 1     scope -> block
Rule 2     block -> block statement
Rule 3     block -> statement
Rule 4     statement -> IF LPAREN comparison RPAREN THEN block END
Rule 5     statement -> IF LPAREN comparison RPAREN THEN block ELSE block END
Rule 6     statement -> FOR LPAREN expression TO expression RPAREN NEXT block END
Rule 7     statement -> WHILE LPAREN comparison RPAREN NEXT block END
Rule 8     statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 9     statement -> VARIABLE EQUALS expression SEMICOLON
Rule 10    statement -> VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON
Rule 11    statement -> ADDRESS VARIABLE EQUALS expression SEMICOLON
Rule 12    statement -> VARIABLE LSQUARE expression RSQUARE EQUALS expression SEMICOLON
Rule 13    statement -> ADDRESS VARIABLE LSQUARE expression RSQUARE EQUALS expression SEMICOLON
Rule 14    statement -> VAR VARIABLE EQUALS expression SEMICOLON
Rule 15    statement -> VAR VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON
Rule 16    statement -> CONST VARIABLE EQUALS expression SEMICOLON
Rule 17    statement -> CONST VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON
Rule 18    statement -> DEF VARIABLE LPAREN dargument RPAREN DO block END
Rule 19    statement -> DEF VARIABLE LPAREN RPAREN DO block END
Rule 20    statement -> VARIABLE LPAREN cargument RPAREN SEMICOLON
Rule 21    statement -> VARIABLE LPAREN RPAREN SEMICOLON
Rule 22    dargument -> dargument SEPARATOR VARIABLE
Rule 23    dargument -> VARIABLE
Rule 24    cargument -> cargument SEPARATOR expression
Rule 25    cargument -> expression
Rule 26    statement -> DELETE VARIABLE SEMICOLON
Rule 27    statement -> expression SEMICOLON
Rule 28    comparison -> expression INFERIOR expression
Rule 29    comparison -> expression INFERIOR_OR_EQUAL expression
Rule 30    comparison -> expression SUPERIOR expression
Rule 31    comparison -> expression SUPERIOR_OR_EQUAL expression
Rule 32    comparison -> expression DOUBLE_EQUALS expression
Rule 33    comparison -> expression DIFFERENT expression
Rule 34    expression -> expression PLUS expression
Rule 35    expression -> expression MINUS expression
Rule 36    expression -> expression TIMES expression
Rule 37    expression -> expression DIVIDE expression
Rule 38    expression -> expression EXPONENT expression
Rule 39    expression -> expression REMAINDER expression
Rule 40    expression -> expression INFERIOR expression
Rule 41    expression -> expression INFERIOR_OR_EQUAL expression
Rule 42    expression -> expression SUPERIOR expression
Rule 43    expression -> expression SUPERIOR_OR_EQUAL expression
Rule 44    expression -> expression DOUBLE_EQUALS expression
Rule 45    expression -> expression DIFFERENT expression
Rule 46    expression -> MINUS expression
Rule 47    expression -> LPAREN expression RPAREN
Rule 48    expression -> TYPEOF LPAREN VARIABLE RPAREN
Rule 49    expression -> VARIABLE LSQUARE expression RSQUARE
Rule 50    expression -> VARIABLE LSQUARE expression COLON expression RSQUARE
Rule 51    expression -> VARIABLE LSQUARE COLON expression RSQUARE
Rule 52    expression -> VARIABLE LSQUARE expression COLON RSQUARE
Rule 53    expression -> VARIABLE LSQUARE COLON RSQUARE
Rule 54    expression -> NUMBER
Rule 55    expression -> STRING
Rule 56    expression -> VARIABLE

Terminals, with rules where they appear

ADDRESS              : 10 11 13 15 17
COLON                : 50 51 52 53
CONST                : 16 17
DEF                  : 18 19
DELETE               : 26
DIFFERENT            : 33 45
DIVIDE               : 37
DO                   : 18 19
DOUBLE_EQUALS        : 32 44
ELSE                 : 5
END                  : 4 5 6 7 18 19
EQUALS               : 9 10 11 12 13 14 15 16 17
EXPONENT             : 38
FOR                  : 6
IF                   : 4 5
INFERIOR             : 28 40
INFERIOR_OR_EQUAL    : 29 41
LPAREN               : 4 5 6 7 8 18 19 20 21 47 48
LSQUARE              : 12 13 49 50 51 52 53
MINUS                : 35 46
NEXT                 : 6 7
NUMBER               : 54
PLUS                 : 34
PRINT                : 8
QUOTE                : 
REMAINDER            : 39
RPAREN               : 4 5 6 7 8 18 19 20 21 47 48
RSQUARE              : 12 13 49 50 51 52 53
SEMICOLON            : 8 9 10 11 12 13 14 15 16 17 20 21 26 27
SEPARATOR            : 22 24
STRING               : 55
SUPERIOR             : 30 42
SUPERIOR_OR_EQUAL    : 31 43
THEN                 : 4 5
TIMES                : 36
TO                   : 6
TYPEOF               : 48
VAR                  : 14 15
VARIABLE             : 9 10 10 11 12 13 14 15 15 16 17 17 18 19 20 21 22 23 26 48 49 50 51 52 53 56
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

block                : 1 2 4 5 5 6 7 18 19
cargument            : 20 24
comparison           : 4 5 7
dargument            : 18 22
expression           : 6 6 8 9 11 12 12 13 13 14 16 24 25 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 49 50 50 51 52
scope                : 0
statement            : 2 3

Parsing method: LALR

state 0

    (0) S' -> . scope
    (1) scope -> . block
    (2) block -> . block statement
    (3) block -> . statement
    (4) statement -> . IF LPAREN comparison RPAREN THEN block END
    (5) statement -> . IF LPAREN comparison RPAREN THEN block ELSE block END
    (6) statement -> . FOR LPAREN expression TO expression RPAREN NEXT block END
    (7) statement -> . WHILE LPAREN comparison RPAREN NEXT block END
    (8) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (9) statement -> . VARIABLE EQUALS expression SEMICOLON
    (10) statement -> . VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON
    (11) statement -> . ADDRESS VARIABLE EQUALS expression SEMICOLON
    (12) statement -> . VARIABLE LSQUARE expression RSQUARE EQUALS expression SEMICOLON
    (13) statement -> . ADDRESS VARIABLE LSQUARE expression RSQUARE EQUALS expression SEMICOLON
    (14) statement -> . VAR VARIABLE EQUALS expression SEMICOLON
    (15) statement -> . VAR VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON
    (16) statement -> . CONST VARIABLE EQUALS expression SEMICOLON
    (17) statement -> . CONST VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON
    (18) statement -> . DEF VARIABLE LPAREN dargument RPAREN DO block END
    (19) statement -> . DEF VARIABLE LPAREN RPAREN DO block END
    (20) statement -> . VARIABLE LPAREN cargument RPAREN SEMICOLON
    (21) statement -> . VARIABLE LPAREN RPAREN SEMICOLON
    (26) statement -> . DELETE VARIABLE SEMICOLON
    (27) statement -> . expression SEMICOLON
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression EXPONENT expression
    (39) expression -> . expression REMAINDER expression
    (40) expression -> . expression INFERIOR expression
    (41) expression -> . expression INFERIOR_OR_EQUAL expression
    (42) expression -> . expression SUPERIOR expression
    (43) expression -> . expression SUPERIOR_OR_EQUAL expression
    (44) expression -> . expression DOUBLE_EQUALS expression
    (45) expression -> . expression DIFFERENT expression
    (46) expression -> . MINUS expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . TYPEOF LPAREN VARIABLE RPAREN
    (49) expression -> . VARIABLE LSQUARE expression RSQUARE
    (50) expression -> . VARIABLE LSQUARE expression COLON expression RSQUARE
    (51) expression -> . VARIABLE LSQUARE COLON expression RSQUARE
    (52) expression -> . VARIABLE LSQUARE expression COLON RSQUARE
    (53) expression -> . VARIABLE LSQUARE COLON RSQUARE
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . VARIABLE

    IF              shift and go to state 4
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    PRINT           shift and go to state 9
    VARIABLE        shift and go to state 10
    ADDRESS         shift and go to state 11
    VAR             shift and go to state 12
    CONST           shift and go to state 13
    DEF             shift and go to state 14
    DELETE          shift and go to state 15
    MINUS           shift and go to state 16
    LPAREN          shift and go to state 5
    TYPEOF          shift and go to state 17
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19

    scope                          shift and go to state 1
    block                          shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 7

state 1

    (0) S' -> scope .



state 2

    (1) scope -> block .
    (2) block -> block . statement
    (4) statement -> . IF LPAREN comparison RPAREN THEN block END
    (5) statement -> . IF LPAREN comparison RPAREN THEN block ELSE block END
    (6) statement -> . FOR LPAREN expression TO expression RPAREN NEXT block END
    (7) statement -> . WHILE LPAREN comparison RPAREN NEXT block END
    (8) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (9) statement -> . VARIABLE EQUALS expression SEMICOLON
    (10) statement -> . VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON
    (11) statement -> . ADDRESS VARIABLE EQUALS expression SEMICOLON
    (12) statement -> . VARIABLE LSQUARE expression RSQUARE EQUALS expression SEMICOLON
    (13) statement -> . ADDRESS VARIABLE LSQUARE expression RSQUARE EQUALS expression SEMICOLON
    (14) statement -> . VAR VARIABLE EQUALS expression SEMICOLON
    (15) statement -> . VAR VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON
    (16) statement -> . CONST VARIABLE EQUALS expression SEMICOLON
    (17) statement -> . CONST VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON
    (18) statement -> . DEF VARIABLE LPAREN dargument RPAREN DO block END
    (19) statement -> . DEF VARIABLE LPAREN RPAREN DO block END
    (20) statement -> . VARIABLE LPAREN cargument RPAREN SEMICOLON
    (21) statement -> . VARIABLE LPAREN RPAREN SEMICOLON
    (26) statement -> . DELETE VARIABLE SEMICOLON
    (27) statement -> . expression SEMICOLON
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression EXPONENT expression
    (39) expression -> . expression REMAINDER expression
    (40) expression -> . expression INFERIOR expression
    (41) expression -> . expression INFERIOR_OR_EQUAL expression
    (42) expression -> . expression SUPERIOR expression
    (43) expression -> . expression SUPERIOR_OR_EQUAL expression
    (44) expression -> . expression DOUBLE_EQUALS expression
    (45) expression -> . expression DIFFERENT expression
    (46) expression -> . MINUS expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . TYPEOF LPAREN VARIABLE RPAREN
    (49) expression -> . VARIABLE LSQUARE expression RSQUARE
    (50) expression -> . VARIABLE LSQUARE expression COLON expression RSQUARE
    (51) expression -> . VARIABLE LSQUARE COLON expression RSQUARE
    (52) expression -> . VARIABLE LSQUARE expression COLON RSQUARE
    (53) expression -> . VARIABLE LSQUARE COLON RSQUARE
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . VARIABLE

    $end            reduce using rule 1 (scope -> block .)
    IF              shift and go to state 4
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    PRINT           shift and go to state 9
    VARIABLE        shift and go to state 10
    ADDRESS         shift and go to state 11
    VAR             shift and go to state 12
    CONST           shift and go to state 13
    DEF             shift and go to state 14
    DELETE          shift and go to state 15
    MINUS           shift and go to state 16
    LPAREN          shift and go to state 5
    TYPEOF          shift and go to state 17
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19

    statement                      shift and go to state 20
    expression                     shift and go to state 7

state 3

    (3) block -> statement .

    IF              reduce using rule 3 (block -> statement .)
    FOR             reduce using rule 3 (block -> statement .)
    WHILE           reduce using rule 3 (block -> statement .)
    PRINT           reduce using rule 3 (block -> statement .)
    VARIABLE        reduce using rule 3 (block -> statement .)
    ADDRESS         reduce using rule 3 (block -> statement .)
    VAR             reduce using rule 3 (block -> statement .)
    CONST           reduce using rule 3 (block -> statement .)
    DEF             reduce using rule 3 (block -> statement .)
    DELETE          reduce using rule 3 (block -> statement .)
    MINUS           reduce using rule 3 (block -> statement .)
    LPAREN          reduce using rule 3 (block -> statement .)
    TYPEOF          reduce using rule 3 (block -> statement .)
    NUMBER          reduce using rule 3 (block -> statement .)
    STRING          reduce using rule 3 (block -> statement .)
    $end            reduce using rule 3 (block -> statement .)
    END             reduce using rule 3 (block -> statement .)
    ELSE            reduce using rule 3 (block -> statement .)


state 4

    (4) statement -> IF . LPAREN comparison RPAREN THEN block END
    (5) statement -> IF . LPAREN comparison RPAREN THEN block ELSE block END

    LPAREN          shift and go to state 21


state 5

    (47) expression -> LPAREN . expression RPAREN
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression EXPONENT expression
    (39) expression -> . expression REMAINDER expression
    (40) expression -> . expression INFERIOR expression
    (41) expression -> . expression INFERIOR_OR_EQUAL expression
    (42) expression -> . expression SUPERIOR expression
    (43) expression -> . expression SUPERIOR_OR_EQUAL expression
    (44) expression -> . expression DOUBLE_EQUALS expression
    (45) expression -> . expression DIFFERENT expression
    (46) expression -> . MINUS expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . TYPEOF LPAREN VARIABLE RPAREN
    (49) expression -> . VARIABLE LSQUARE expression RSQUARE
    (50) expression -> . VARIABLE LSQUARE expression COLON expression RSQUARE
    (51) expression -> . VARIABLE LSQUARE COLON expression RSQUARE
    (52) expression -> . VARIABLE LSQUARE expression COLON RSQUARE
    (53) expression -> . VARIABLE LSQUARE COLON RSQUARE
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . VARIABLE

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 5
    TYPEOF          shift and go to state 17
    VARIABLE        shift and go to state 23
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19

    expression                     shift and go to state 22

state 6

    (6) statement -> FOR . LPAREN expression TO expression RPAREN NEXT block END

    LPAREN          shift and go to state 24


state 7

    (27) statement -> expression . SEMICOLON
    (34) expression -> expression . PLUS expression
    (35) expression -> expression . MINUS expression
    (36) expression -> expression . TIMES expression
    (37) expression -> expression . DIVIDE expression
    (38) expression -> expression . EXPONENT expression
    (39) expression -> expression . REMAINDER expression
    (40) expression -> expression . INFERIOR expression
    (41) expression -> expression . INFERIOR_OR_EQUAL expression
    (42) expression -> expression . SUPERIOR expression
    (43) expression -> expression . SUPERIOR_OR_EQUAL expression
    (44) expression -> expression . DOUBLE_EQUALS expression
    (45) expression -> expression . DIFFERENT expression

    SEMICOLON       shift and go to state 25
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    EXPONENT        shift and go to state 30
    REMAINDER       shift and go to state 31
    INFERIOR        shift and go to state 32
    INFERIOR_OR_EQUAL shift and go to state 33
    SUPERIOR        shift and go to state 34
    SUPERIOR_OR_EQUAL shift and go to state 35
    DOUBLE_EQUALS   shift and go to state 36
    DIFFERENT       shift and go to state 37


state 8

    (7) statement -> WHILE . LPAREN comparison RPAREN NEXT block END

    LPAREN          shift and go to state 38


state 9

    (8) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 39


state 10

    (9) statement -> VARIABLE . EQUALS expression SEMICOLON
    (10) statement -> VARIABLE . EQUALS ADDRESS VARIABLE SEMICOLON
    (12) statement -> VARIABLE . LSQUARE expression RSQUARE EQUALS expression SEMICOLON
    (20) statement -> VARIABLE . LPAREN cargument RPAREN SEMICOLON
    (21) statement -> VARIABLE . LPAREN RPAREN SEMICOLON
    (49) expression -> VARIABLE . LSQUARE expression RSQUARE
    (50) expression -> VARIABLE . LSQUARE expression COLON expression RSQUARE
    (51) expression -> VARIABLE . LSQUARE COLON expression RSQUARE
    (52) expression -> VARIABLE . LSQUARE expression COLON RSQUARE
    (53) expression -> VARIABLE . LSQUARE COLON RSQUARE
    (56) expression -> VARIABLE .

    EQUALS          shift and go to state 40
    LSQUARE         shift and go to state 41
    LPAREN          shift and go to state 42
    SEMICOLON       reduce using rule 56 (expression -> VARIABLE .)
    PLUS            reduce using rule 56 (expression -> VARIABLE .)
    MINUS           reduce using rule 56 (expression -> VARIABLE .)
    TIMES           reduce using rule 56 (expression -> VARIABLE .)
    DIVIDE          reduce using rule 56 (expression -> VARIABLE .)
    EXPONENT        reduce using rule 56 (expression -> VARIABLE .)
    REMAINDER       reduce using rule 56 (expression -> VARIABLE .)
    INFERIOR        reduce using rule 56 (expression -> VARIABLE .)
    INFERIOR_OR_EQUAL reduce using rule 56 (expression -> VARIABLE .)
    SUPERIOR        reduce using rule 56 (expression -> VARIABLE .)
    SUPERIOR_OR_EQUAL reduce using rule 56 (expression -> VARIABLE .)
    DOUBLE_EQUALS   reduce using rule 56 (expression -> VARIABLE .)
    DIFFERENT       reduce using rule 56 (expression -> VARIABLE .)


state 11

    (11) statement -> ADDRESS . VARIABLE EQUALS expression SEMICOLON
    (13) statement -> ADDRESS . VARIABLE LSQUARE expression RSQUARE EQUALS expression SEMICOLON

    VARIABLE        shift and go to state 43


state 12

    (14) statement -> VAR . VARIABLE EQUALS expression SEMICOLON
    (15) statement -> VAR . VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON

    VARIABLE        shift and go to state 44


state 13

    (16) statement -> CONST . VARIABLE EQUALS expression SEMICOLON
    (17) statement -> CONST . VARIABLE EQUALS ADDRESS VARIABLE SEMICOLON

    VARIABLE        shift and go to state 45


state 14

    (18) statement -> DEF . VARIABLE LPAREN dargument RPAREN DO block END
    (19) statement -> DEF . VARIABLE LPAREN RPAREN DO block END

    VARIABLE        shift and go to state 46


state 15

    (26) statement -> DELETE . VARIABLE SEMICOLON

    VARIABLE        shift and go to state 47


state 16

    (46) expression -> MINUS . expression
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression EXPONENT expression
    (39) expression -> . expression REMAINDER expression
    (40) expression -> . expression INFERIOR expression
    (41) expression -> . expression INFERIOR_OR_EQUAL expression
    (42) expression -> . expression SUPERIOR expression
    (43) expression -> . expression SUPERIOR_OR_EQUAL expression
    (44) expression -> . expression DOUBLE_EQUALS expression
    (45) expression -> . expression DIFFERENT expression
    (46) expression -> . MINUS expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . TYPEOF LPAREN VARIABLE RPAREN
    (49) expression -> . VARIABLE LSQUARE expression RSQUARE
    (50) expression -> . VARIABLE LSQUARE expression COLON expression RSQUARE
    (51) expression -> . VARIABLE LSQUARE COLON expression RSQUARE
    (52) expression -> . VARIABLE LSQUARE expression COLON RSQUARE
    (53) expression -> . VARIABLE LSQUARE COLON RSQUARE
    (54) expression -> . NUMBER
    (55) expression -> . STRING
    (56) expression -> . VARIABLE

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 5
    TYPEOF          shift and go to state 17
    VARIABLE        shift and go to state 23
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19

    expression                     shift and go to state 48

state 17

    (48) expression -> TYPEOF . LPAREN VARIABLE RPAREN

    LPAREN          shift and go to state 49


state 18

    (54) expression -> NUMBER .
